maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:8: error: not enough arguments for method indiqueLeReste: (x: Int, y: Int)Unit.
Unspecified value parameter y.
  indiqueLeReste(trouveBiscuit())
                ^JediEscaper:24: error: not found: value min
  return min((min(x,y),min(a,b)))
         ^JediEscaper:24: error: not found: value min
  return min((min(x,y),min(a,b)))
              ^JediEscaper:24: error: not found: value min
  return min((min(x,y),min(a,b)))
                       ^JediEscaper:46: error: not found: value caseVoisineLaPlusProche
    temp=caseVoisineLaPlusProche(x,y)
         ^JediEscaper:47: error: not found: value void
    void setDirection(temp)
    ^